--- a/package.json
+++ b/package.json
@@ -15,23 +15,27 @@
     "dotenv": "^10.0.0",
     "express": "4.17.1",
     "express-rate-limit": "^5.3.0",
+    "gravatar": "^1.8.1",
     "helmet": "^4.6.0",
-    "joi": "^17.4.1",
+    "jimp": "^0.16.1",
+    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.3",
+    "mongoose": "^5.13.7",
     "mongoose-paginate-v2": "^1.4.1",
     "morgan": "1.10.0",
+    "multer": "^1.4.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "eslint": "^7.19.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^4.3.1",
     "nodemon": "2.0.7",
     "prettier": "^2.3.2"
   }
